--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
+  "name": "chapter-to-mp3",
+  "version": "1.0.0",
   "scripts": {
-    "start": "node server.js"
+    "start": "node api/index.js"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@ffprobe-installer/ffprobe": "^2.1.2",
     "cors": "^2.8.5",
-    "express": "^5.2.1"
-  },
-  "devDependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "express": "^5.2.1",
     "fluent-ffmpeg": "^2.1.3"
   }
 }
