--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
     "start": "node api/index.js"
   },
   "dependencies": {
-    "@ffmpeg-installer/ffmpeg": "^1.1.0",
-    "@ffprobe-installer/ffprobe": "^2.1.2",
-    "cors": "^2.8.5",
     "express": "^5.2.1",
-    "fluent-ffmpeg": "^2.1.3"
+    "cors": "^2.8.5",
+    "fluent-ffmpeg": "^2.1.3",
+    "ffmpeg-static": "^5.2.0" 
   }
 }
