--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,11 @@
 {
-    "version": 2,
-    "functions": {
-      "api/index.js": {
-        "maxDuration": 60 
-      }
-    },
-    "rewrites": [
-      { "source": "/api/(.*)", "destination": "/api/index.js" },
-      { "source": "/(.*)", "destination": "/index.html" }
-    ]
-  }
+  "version": 2,
+  "functions": {
+    "api/index.js": {
+      "maxDuration": 60
+    }
+  },
+  "rewrites": [
+    { "source": "/api/(.*)", "destination": "/api/index.js" }
+  ]
+}
